--- a/webapp/view/S1.view.xml
+++ b/webapp/view/S1.view.xml
@@ -3,7 +3,8 @@
     xmlns="sap.m">
     <Page id="page" title="{i18n>title}">
         <content>
-			<Button text="Hi" icon="sap-icon://action" tooltip="Share" />
+			<Button text="Hi" icon="sap-icon://action" tooltip="Share">
+            </Button>
          </content>
     </Page>
 </mvc:View>
